# GLAER

./: .gitignore  CMakeLists.txt  README.md  getdocs.py  glapi.py  makeglaer.py
common/: glaer.c  glaer.h
glapi/: .gitignore  __init__.py
glapi/docs/: .gitignore  man2.stamp  man3.stamp  man4.stamp
test/: CMakeLists.txt
test/src/: main.cpp
